fix quiz styling on mobile

--- a/wp-content/themes/nerds/less/style.less
+++ b/wp-content/themes/nerds/less/style.less
@@ -112,6 +112,20 @@ ul#staff-roster {
 #sidebar .widget-area {
   padding-left: 40px;
 }
+.largo-interactive-quiz {
+  h3.largo-interactive-headline {
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 8px;
+  }
+  h1 {
+    font-size: 21px;
+    margin-bottom: 8px;
+  }
+  p {
+    font-size: 18px;
+  }
+}
 
 @media all and (max-width: 768px) {
   #sidebar .widget-area {
